--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,9 +9,9 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 // sidebar
-$menuText:#3C3C3C;
+$menuText:#5B5B5B;
 $menuActiveText:$light-blue;
-$subMenuActiveText:#3C3C3C; //https://github.com/ElemeFE/element/issues/12951
+$subMenuActiveText:#5B5B5B; //https://github.com/ElemeFE/element/issues/12951
 
 $menuBg:#fff;
 $menuHover:#E0E0E0;
